--- a/bluebottle/bb_fundraisers/templates/bb_fundraisers/_fundraiser_actions.hbs
+++ b/bluebottle/bb_fundraisers/templates/bb_fundraisers/_fundraiser_actions.hbs
@@ -52,7 +52,7 @@
             </a>
         </div>
         <div class="project-supporters">
-            <strong>32 <em>{% trans "Supporters" %}</em></strong>
+            <strong>{{fundraiserDonations.length}} <em>{% trans "Supporters" %}</em></strong>
             {{simple-project-supporters supporters=recentSupporters showProfile="showProfile" limit=10}}
         </div>
     </div>
