--- a/bluebottle/wallposts/templates/wallposts/partials/_signin.hbs
+++ b/bluebottle/wallposts/templates/wallposts/partials/_signin.hbs
@@ -4,8 +4,13 @@
 
 {% tplhandlebars "_signin" %}
 
-<div class="signin">
-    {% trans "Please" %} <a class="button" {{action openInBox "login"}}>{% trans "Sign in" %}</a> {% trans "to post a comment" %}.
+<div class="wallpost-update">
+    <header class="wallpost-update-header">
+        <strong class="wallpost-update-title">{% trans "Write a comment" %}</strong>
+    </header>
+    <div class="signin">
+    	{% trans "Please" %} <a class="button" {{action openInBox "login"}}>{% trans "Sign in" %}</a> {% trans "to post a comment" %}.
+	</div>
 </div>
 
 {% endtplhandlebars %}
