--- a/bluebottle/bb_tasks/templates/bb_tasks/task.hbs
+++ b/bluebottle/bb_tasks/templates/bb_tasks/task.hbs
@@ -11,8 +11,9 @@
                 <div class="project-meta">
                     {{!-- <span class="project-location">{{country.name}}</span>
                     <span class="project-category">{{theme.name}}</span> --}}
-                    <span class="project-status">{{statusLabel}} {% trans "Task for" %}</span>
-                    <span class="project-campaign">{{#link-to 'project' project}}{{project.title}}{{/link-to}}</span>
+                    {{#link-to 'project' project class="project-breadcrumb"}}
+                        <span class="project-status">{{statusLabel}} {% trans "Task for" %} </span><span class="project-campaign">{{project.title}}</span>
+                    {{/link-to}}
                 </div>
                 <h1 class="project-title">{{title}}</h1>
                 <p class="project-description">
