Alligned days left on detail page + extra padding header

--- a/bluebottle/bb_projects/templates/bb_projects/_project_actions_with_funding.hbs
+++ b/bluebottle/bb_projects/templates/bb_projects/_project_actions_with_funding.hbs
@@ -75,7 +75,7 @@
                 {{#if overDeadline}}
                     {% trans "Deadline passed" %}
                 {{else}}
-                    {{daysToGo}} {% trans "days left" %}
+                    <strong>{{daysToGo}}</strong> {% trans "days left" %}
                 {{/if}}
                 </div>
             </div>
