Several changes detail/fund/task pages
- toggle read more/less
- Change fundraiser name in call-to-action to first name only
- Autogrow textareas
- share function thank you modal (not finished)

--- a/bluebottle/bb_fundraisers/templates/bb_fundraisers/_fundraiser_actions.hbs
+++ b/bluebottle/bb_fundraisers/templates/bb_fundraisers/_fundraiser_actions.hbs
@@ -31,7 +31,7 @@
                     {{localize deadline formatting="X"}}
                 </div>
             {{else}}
-                <a {{action 'addDonation' this.project this.model}} data-action-type="donate" class="button button-big"> {% trans "Support" %} {{owner.full_name}}</a>
+                <a {{action 'addDonation' this.project this.model}} data-action-type="donate" class="button button-big"> {% trans "Support" %} {{owner.first_name}}</a>
                 {{view 'App.MpesaDonateView' class="mpesa-donate" }}
             {{/if}}
         </div>
