--- a/bluebottle/bb_projects/templates/bb_projects/project.hbs
+++ b/bluebottle/bb_projects/templates/bb_projects/project.hbs
@@ -13,7 +13,8 @@
                     <span class="project-category">{{theme.name}}</span>
                 </div>
                 <h1 class="project-title">{{title}}</h1>
-                <p class="project-description">{{pitch}} <a {{action openInFullScreenBox "projectPlan" this}} class="project-more">{% trans "Read full project plan" %}</a></p>
+                <p class="project-description">{{pitch}}</p>
+                <a {{action openInFullScreenBox "projectPlan" this}} class="project-more">{% trans "Read full project plan" %}</a>
             </article>
             <aside class="project-media">
                 <div class="project-share">
