--- a/bluebottle/bb_fundraisers/templates/bb_fundraisers/fundraiser.hbs
+++ b/bluebottle/bb_fundraisers/templates/bb_fundraisers/fundraiser.hbs
@@ -16,8 +16,9 @@
                 </div>
                 <h1 class="project-title">{{title}}</h1>
                 <p class="project-description">
-                    {{description}} <a {{action openInFullScreenBox "projectPlan" this}} class="project-more">{% trans "Read full project plan" %}</a>
+                    {{description}}
                 </p>
+                <a class="project-more read-more">{% trans "Read full project plan" %}</a>
             </article>
             <aside class="project-media">
                 <div class="project-share">
