remove share function

--- a/bluebottle/bb_donations/templates/bb_donations/donation_success.hbs
+++ b/bluebottle/bb_donations/templates/bb_donations/donation_success.hbs
@@ -21,8 +21,8 @@
         <div class="donation-share">
             <p>{% trans "Be sure to share this campaign with your network" %}</p>
             <ul>
-                <li><a {{action shareOnFacebook target="view"}} class="share-facebook" href="#">Facebook</a></li>
-                <li><a {{action shareOnTwitter target="view"}} class="share-twitter" href="#">Twitter</a></li>
+                <li><a class="share-facebook" href="#">Facebook</a></li>
+                <li><a class="share-twitter" href="#">Twitter</a></li>
             </ul>
         </div>
     </div>
