Fixed tasks & fundraiser breadcrumb

--- a/bluebottle/bb_tasks/templates/bb_tasks/task.hbs
+++ b/bluebottle/bb_tasks/templates/bb_tasks/task.hbs
@@ -12,7 +12,7 @@
                     {{!-- <span class="project-location">{{country.name}}</span>
                     <span class="project-category">{{theme.name}}</span> --}}
                     {{#link-to 'project' project class="project-breadcrumb"}}
-                        <span class="project-status">{{statusLabel}} {% trans "Task for" %} </span><span class="project-campaign">{{project.title}}</span>
+                        <span class="project-linked">{{statusLabel}} {% trans "Task for" %} </span><span class="project-campaign">{{project.title}}</span>
                     {{/link-to}}
                 </div>
                 <h1 class="project-title">{{title}}</h1>
