--- a/bluebottle/bb_donations/templates/bb_donations/donation_success.hbs
+++ b/bluebottle/bb_donations/templates/bb_donations/donation_success.hbs
@@ -18,13 +18,13 @@
         {{else}}
             {{bb-modal-text-wallpost-new parentType='project' close="close" parentId=project.id addWallpost='addWallpost'}}
         {{/if}}
-        <div class="donation-share">
+{{!--         <div class="donation-share">
             <p>{% trans "Be sure to share this campaign with your network" %}</p>
             <ul>
                 <li><a class="share-facebook" href="#">Facebook</a></li>
                 <li><a class="share-twitter" href="#">Twitter</a></li>
             </ul>
-        </div>
+        </div> --}}
     </div>
 
 {% endtplhandlebars %}
