--- a/bluebottle/wallposts/templates/wallposts/components/bb-wallpost.hbs
+++ b/bluebottle/wallposts/templates/wallposts/components/bb-wallpost.hbs
@@ -12,7 +12,7 @@
             </figure>
 
             <a {{action openInBigBox "userModal" wallpost.author}} class="user-name">
-                <strong>{{wallpost.author.full_name}}</strong>
+                <strong>{{wallpost.author.full_name}} sfsdfy</strong>
             </a>
 
             <abbr class="timestamp">{{ localize wallpost.created formatting="X" }}</abbr>
