--- a/bluebottle/wallposts/templates/wallposts/components/bb-modal-text-wallpost-new.hbs
+++ b/bluebottle/wallposts/templates/wallposts/components/bb-modal-text-wallpost-new.hbs
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="col12">
                     <div class="btn-group">
-                        <button class="btn is-inactive" {{action 'closeModal'}}>{% trans "No, thanks" %}</button>
+                        <button class="btn is-inactive" {{action 'close'}}>{% trans "No, thanks" %}</button>
                         <button {{bind-attr class="isSaving:is-loading :btn"}} {{action 'addWallpost'}}>{% trans "Leave Message" %}</button>
                     </div>
                 </div>
