CLUB-1276, wallpost link fix

--- a/bluebottle/common/static/refactor-sass/modules/_wallpost.scss
+++ b/bluebottle/common/static/refactor-sass/modules/_wallpost.scss
@@ -11,6 +11,7 @@
         float: left;
         margin: 0 20px 10px 0;
         padding: 0;
+        cursor: pointer;
 
         img {
             background-color: $color-grey-back;
