only allow editing of project if owner and status is 'campaign' CLUB-1303

--- a/bluebottle/bb_projects/templates/bb_projects/project.hbs
+++ b/bluebottle/bb_projects/templates/bb_projects/project.hbs
@@ -18,7 +18,7 @@
             </article>
             <aside class="project-media">
 
-                {{#if isProjectOwner}}
+                {{#if canEdit}}
                     <div class="project-owner-actions">
                         {{#link-to "myProject" id}}
                             {% trans 'Edit' %} {% trans 'Campaign' %}
