--- a/bluebottle/payments/templates/payments/order_payment.hbs
+++ b/bluebottle/payments/templates/payments/order_payment.hbs
@@ -60,7 +60,7 @@
     </div>
     <div class="modal-fullscreen-footer">
         <div class="modal-payment-provider">
-            <span>Payment processing is securely handled by <a {{bindAttr href=currentPaymentMethodURL }} target="_blank">{{currentPaymentMethod.providerName}}</a>.</span>
+            <span>{% trans "Payment processing is securely handled by" %} <a {{bindAttr href=currentPaymentMethodURL }} target="_blank">{{currentPaymentMethod.providerName}}</a>.</span>
         </div>
     </div>
 {% endtplhandlebars %}
