--- a/bluebottle/wallposts/templates/wallposts/components/bb-media-wallpost-new.hbs
+++ b/bluebottle/wallposts/templates/wallposts/components/bb-media-wallpost-new.hbs
@@ -27,7 +27,7 @@
                 {{/if}}
 
                 {{view Ember.TextArea valueBinding="wallpost.text" name="wallpost-update" class="wallpost-update-post"
-                        classBinding="wallpost.errors.text.length:error" placeholder="Share an update with your supporters"}}
+                        classBinding="wallpost.errors.text.length:error" placeholderBinding="translatables.shareText"}}
     
                 <div class="wallpost-photos">
                     {{bb-upload-multiple-images uploadFilesBinding="wallpostFiles" multiple="multiple"
@@ -35,7 +35,7 @@
                 </div>
     
                 <div class="wallpost-video">
-                    {{input valueBinding="wallpost.video_url" placeholder="Youtube or Vimeo url" id="wallpost-video"
+                    {{input valueBinding="wallpost.video_url" placeholderBinding="translatables.videoText" id="wallpost-video"
                     name="wallpost-video" classBinding="wallpost.errors.video_url.length:error"}}
                 </div>
             </div>
