--- a/bluebottle/bb_fundraisers/templates/bb_fundraisers/fundraiser_form.hbs
+++ b/bluebottle/bb_fundraisers/templates/bb_fundraisers/fundraiser_form.hbs
@@ -3,15 +3,17 @@
 {% tplhandlebars "fundraiser_form" %}
     <fieldset>
         <ul>
-            {% include "generic/form_field.html" with title=_("Title") placeholder="Title describes your fundraiser action in short" field_type="Em.TextField" field_name="title" %}
+            {% include "generic/form_field.html" with title=_("Title") placeholder=_("Title describes your fundraiser action in short") field_type="Em.TextField" field_name="title" %}
 
-            {% include "generic/form_field.html" with title=_("Description") placeholder="Tell a little more about your fundraise action" field_type="Em.TextArea" field_name="description" %}
+            {% include "generic/form_field.html" with title=_("Description") placeholder=_("Tell a little more about your fundraise action") field_type="Em.TextArea" field_name="description" %}
         </ul>
     </fieldset>
 
     <fieldset>
         <ul>
-            {% comment %}{% include "generic/form_imagefield.html" with title=_("Image") field_name="image" help_text="Minimal of 800px wide" %}{% endcomment %}
+            {% comment %}
+                {% include "generic/form_imagefield.html" with title=_("Image") field_name="image" help_text=_("Minimal of 800px wide") %}
+            {% endcomment %}
 
             <li class="control-group profile-picture-container">
                 <label class="control-label">
@@ -31,7 +33,7 @@
                 </div>
             </li>
 
-            {% include "generic/form_field.html" with title=_("Video") placeholder="http://" field_type="Em.TextField" field_name="video_url" help_text="Youtube or Vimeo link" %}
+            {% include "generic/form_field.html" with title=_("Video") placeholder="http://" field_type="Em.TextField" field_name="video_url" help_text=_("Youtube or Vimeo link") %}
         </ul>
     </fieldset>
 
