--- a/bluebottle/bb_donations/templates/bb_donations/mails/new_oneoff_donation.mail.html
+++ b/bluebottle/bb_donations/templates/bb_donations/mails/new_oneoff_donation.mail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 {% blocktrans with amount=amount donor_name=donor_name site=site link=link %}
-Hello,<br/>
+Hello {{first_name}},<br/>
 <br/>
 You just received a EUR {{ amount }} donation from {{ donor_name }}!<br/>
 <br/>
