--- a/bluebottle/bb_donations/templates/bb_donations/mails/new_oneoff_donation_fundraiser.mail.html
+++ b/bluebottle/bb_donations/templates/bb_donations/mails/new_oneoff_donation_fundraiser.mail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 {% blocktrans with amount=amount|floatformat:2 donor_name=donor_name site=site link=link receiver=receiver %}
-Hello {{receiver}},
+Hello {{first_name}},
 <br/><br/>
 You just received a EUR {{ amount }} donation!
 <br/><br/>
