--- a/bluebottle/bb_projects/templates/bb_projects/_project_actions_with_funding.hbs
+++ b/bluebottle/bb_projects/templates/bb_projects/_project_actions_with_funding.hbs
@@ -109,7 +109,7 @@
             </a>
         </div>
         <div class="project-supporters">
-            <strong>{{supporters.length}} <em>{% trans "Supporters" %}</em></strong>
+            <strong><em>{% trans "Supporters" %}</em></strong>
             {{simple-project-supporters supporters=recentSupporters showProfile="showProfile" limit=13}}
         </div>
     </div>
