Fixed call-to-action states + Breadcrumb hover

--- a/bluebottle/common/static/refactor-sass/pages/_project-detail-header.scss
+++ b/bluebottle/common/static/refactor-sass/pages/_project-detail-header.scss
@@ -128,7 +128,7 @@
 
                     &:hover {
 
-                        .project-status {
+                        .project-linked {
                             background-color: $color-pri;
 
                             &:after {
