--- a/bluebottle/wallposts/templates/wallposts/partials/_signin.hbs
+++ b/bluebottle/wallposts/templates/wallposts/partials/_signin.hbs
@@ -9,7 +9,7 @@
         <strong class="wallpost-update-title">{% trans "Write a comment" %}</strong>
     </header>
     <div class="signin">
-    	{% trans "Please" %} <a class="button" {{action openInBox "login"}}>{% trans "Sign in" %}</a> {% trans "to post a comment" %}.
+    	<a class="button" {{action openInBox "login"}}>{% trans "Sign in" %}</a> {% trans "to post a comment" %}.
 	</div>
 </div>
 
