Fixed user name space and link

--- a/bluebottle/common/static/refactor-sass/modules/_wallpost.scss
+++ b/bluebottle/common/static/refactor-sass/modules/_wallpost.scss
@@ -5,6 +5,10 @@
 
     a {
         text-decoration: none;
+
+        &:hover, &:active {
+            text-decoration: underline;
+        }
     }
 
     .user-avatar {
