--- a/bluebottle/common/static/refactor-sass/modules/_wallpost.scss
+++ b/bluebottle/common/static/refactor-sass/modules/_wallpost.scss
@@ -92,6 +92,10 @@
         p:last-of-type {
             margin-bottom: 0;
         }
+
+        .video {
+            margin-bottom: 0;
+        }
     }
 }
 
