activity hide class

--- a/bluebottle/bb_fundraisers/templates/bb_fundraisers/project_fundraiser_list.hbs
+++ b/bluebottle/bb_fundraisers/templates/bb_fundraisers/project_fundraiser_list.hbs
@@ -3,7 +3,7 @@
 
 {% tplhandlebars "project_fundraiser_list" %}
     
-    <div class="activity">
+    <div {{bindAttr class=":activity controllers.project.isStatusCampaign::activity-hide" }}>
 
         {{#if fundraisers.length}}
             <header class="activity-header">
