--- a/bluebottle/common/static/refactor-sass/modules/_wallpost.scss
+++ b/bluebottle/common/static/refactor-sass/modules/_wallpost.scss
@@ -173,7 +173,7 @@
     line-height: 1.5em;
     margin: 0 0 30px 0;
     color: $color-text;
-    padding: 0; // TODO: change global list
+    padding: 0 0 20px 0; // TODO: change global list
     border: 1px solid $color-grey-medium;
     border-radius: $radius-medium;
     background-color: $color-grey-lightest;
@@ -196,7 +196,7 @@
     .comment-body {
         @include break-all-words;
         overflow: hidden;
-        padding: 0 20px 20px 0;
+        padding: 0 20px 3px 0;
 
         &:first-letter {
             text-transform: uppercase;
@@ -204,7 +204,6 @@
     }
 
     .user-avatar {
-        
         img {
             width: 50px;
             height: 50px;
