More feedback from Joris!

--- a/bluebottle/common/static/refactor-sass/pages/_project-detail-header.scss
+++ b/bluebottle/common/static/refactor-sass/pages/_project-detail-header.scss
@@ -98,7 +98,7 @@
                         background-color: $color-sec;
                         color: $color-white;
                         text-transform: uppercase;
-                        padding: 0 2px 0 10px;
+                        padding: 1px 5px 0 10px;
                         @include border-left-radius($radius-medium);
                         font-size: 13px;
                         height: 26px;
