Moaaaaar blur! + Fundraiser amount raised 100% fix

--- a/bluebottle/common/static/refactor-sass/modules/_activity.scss
+++ b/bluebottle/common/static/refactor-sass/modules/_activity.scss
@@ -134,9 +134,10 @@
     .progress-bar {
         position: relative;
         top: 5px;
+        display: block;
+        margin-right: 30%;
 
         .project-fund-amount-slider {
-            width: 70%;
             border: none;
             background-color: $color-real-white;
 
