--- a/bluebottle/common/static/refactor-sass/pages/_project-detail-header.scss
+++ b/bluebottle/common/static/refactor-sass/pages/_project-detail-header.scss
@@ -65,8 +65,8 @@
             background-repeat: no-repeat;
             background-size: cover;
             background-position: 50% 50%;
-            @include filter(blur(8px));
-            filter: url(#projectBlur);
+            @include filter(blur(25px));
+            // filter: url(#projectBlur);
             @include opacity(.4);
             @include transform(scale(1.05));
         }
